first major push of code in all files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles.css">
+    <title>Code Quiz</title>
+    <h1 id="">Code Quiz</h1>
 </head>
 <body>
-    
+    <div id="container">
+        ,<div id="carousel">
+            <button id="Start">Start</button>
+            <button id="previous">Previous</button>
+            <button id="next">Next</button>
+        </div>
+    </div>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
