--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 <button id="previos-btn" class="previous-btn btn hide"></button>
                 <button id="next-btn" class="next-btn btn hide"></button>
         </div>
+        <div id="score-box" class="score-box">
+            <div id="score">0</div>
+            <div id="high-score">0</div>
+            <button id="reset-btn" class="reset-btn btn">Reset</button>
+            <button id="submit-btn" class="submit-btn btn">Submit</button>
+            <div id="time">00:00</div>
+            <div id="timer" class="timer"></div>
+        </div>
     <script src="./assets/script.js"></script>
 </body>
 </html>
