--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <button class="btn">Answer 4</button>
                     </div>
             </div>
-            <div class="controls">
+            <div class="control-btns">
                 <button id="start-btn" class="start-btn btn">Start</button>
                 <button id="previos-btn" class="previous-btn btn hide"></button>
                 <button id="next-btn" class="next-btn btn hide"></button>
