--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    
-    <title>Code Quiz</title>
-    
-</head>
-<body>   
-        <div class="container">
-            <div id="question-container" class="hide">
-                <div id="question">Question</div>
-                    <div id="btn-answers" class="btn-grid">
-                        <button class="btn">Answer 1</button>
-                        <button class="btn">Answer 2</button>
-                        <button class="btn">Answer 3</button>
-                        <button class="btn">Answer 4</button>
-                    </div>
-            </div>
-            <div class="control-btns">
-                <button id="start-btn" class="start-btn btn">Start</button>
-                <button id="previous-btn" class="previous-btn btn hide"></button>
-                <button id="next-btn" class="next-btn btn hide"></button>
-            </div>
 
-            <div id="score-box" class="score-box">
-                <div id="score">0</div>
-                <div id="high-score">0</div>
-                <button id="reset-btn" class="reset-btn btn">Reset</button>
-                <button id="submit-btn" class="submit-btn btn">Submit</button>
-                <div id="time">00:00</div>
-                <div id="timer" class="timer"></div>
+    <title>Code Quiz</title>
+</head>
+
+<body>
+    <header>
+        <h>Code Quiz</h>
+        <h2 class="timer">Time</h2>
+        <div id="main" class="score-board"></div>
+    </header>
+    <div class="container">
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="btn-answers" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
             </div>
         </div>
+        <div class="control-btns">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="previous-btn" class="previous-btn btn hide">Previous</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
