--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <button id="previous-btn" class="previous-btn btn hide">Previous</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
+        <div class="save-score">
+            <input type="text" placeholder="initials" class="initials hide"></input>
+            <button id="save-score-btn" class="save-score-btn btn hide">Save</button>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
